# MedicalImage

./: .gitignore  README.md  requirement.txt  requirements.txt
code/: CT_classification.ipynb  CT_classification_1.py  MRI.py  MRI_1.py  MRI_2.py  PET_CT_112.py  PET_CT_134.py  PET_CT_1345.py  run_script.py
code/CT/: CT.py
code/MRI/: MRI_1.py  MRI_2.py
code/PET_CT/: PET_CT_112.py  PET_CT_1345.py
docs/source/: conf.py
docs/source/modules/: PET_CT.rst
graphs/: features.csv
medical_image_coursework/: README.md  pyproject.toml
medical_image_coursework/medical_image_coursework/MRI/: MRI_1.py  MRI_2.py
medical_image_coursework/saved_data/: ct_ossart.npy
